@@ -31,7 +31,9 @@
  **/
 
 /* strdup need this */
+#ifndef _SVID_SOURCE
 #define _SVID_SOURCE 1 
+#endif
 
 #include <stdio.h>
 #include <string.h>
@@ -41,7 +43,11 @@
 
 #include "libieee1284/include/ieee1284.h"
 
+typedef struct parport typ_parport;
+typedef struct parport_list typ_parport_list;
+
 #include "epl_job.h"
+#include "epl_bid.h"
 
 enum devid_field { devid_cls, devid_mfg, devid_mdl };
 
@@ -118,7 +124,7 @@ static void test_deviceid (EPL_job_info *epl_job_info, struct parport_list *pl)
 	  if (model > 0)  
 	    {
 	      epl_job_info->model = model;
-	      memcpy(epl_job_info->port, pl->portv[i], sizeof(struct parport));
+	      epl_job_info->port = pl->portv[i];
 	    }
 	}
       else if (ieee1284_get_deviceid (pl->portv[i], -1, 0, id, 500) > -1)
@@ -129,7 +135,7 @@ static void test_deviceid (EPL_job_info *epl_job_info, struct parport_list *pl)
 	  if (model > 0)  
 	    {
 	      epl_job_info->model = model;
-	      memcpy(epl_job_info->port, pl->portv[i], sizeof(struct parport));
+	      epl_job_info->port = pl->portv[i];
 	    }
 	}
       printf ("\n");
@@ -143,7 +149,7 @@ static void test_deviceid (EPL_job_info *epl_job_info, struct parport_list *pl)
 	    if (model > 0)  
 	      {
 		epl_job_info->model = model;
-		memcpy(epl_job_info->port, pl->portv[i], sizeof(struct parport));
+		epl_job_info->port = pl->portv[i];
 	      }
 	  }
       putchar ('\n');
@@ -176,7 +182,6 @@ static int show_capabilities (unsigned int cap)
 int epl_libieee1284_write(struct parport *port, char *ts, int length)
 {
   int r;
-  fprintf(stderr,"write %d\n", *ts);
   r = ieee1284_negotiate (port, M1284_COMPAT);
 
   if (r != E1284_OK)
@@ -192,8 +197,8 @@ int epl_libieee1284_read(struct parport *port, char *inbuf, int length)
   
   if (r != E1284_OK)
     printf ("Couldn't negotiate read: %d\n", r);
-  
-  r = ieee1284_nibble_read (port, F1284_NONBLOCK, inbuf, length);
+
+  r = ieee1284_nibble_read (port , F1284_NONBLOCK, inbuf, length);
   ieee1284_terminate (port);
   
   return r;
@@ -201,14 +206,13 @@ int epl_libieee1284_read(struct parport *port, char *inbuf, int length)
 
 void epl_libieee1284_init(EPL_job_info *epl_job_info)
 {
-  struct parport_list pl;
   struct parport *port;
-  unsigned int cap;
+  int cap;
 
-  epl_job_info->port = (struct partport *)malloc(sizeof(struct parport));
-  ieee1284_find_ports (&pl, 0);
-  test_deviceid (epl_job_info, &pl);
-  ieee1284_free_ports (&pl);
+  epl_job_info->port = (typ_parport *)malloc(sizeof(typ_parport));
+  epl_job_info->port_list = (typ_parport_list *)malloc(sizeof(typ_parport_list));
+  ieee1284_find_ports (epl_job_info->port_list, 0);
+  test_deviceid (epl_job_info, epl_job_info->port_list);
   
   if (epl_job_info->port == NULL) 
     {
@@ -258,4 +262,6 @@ void epl_libieee1284_end(EPL_job_info *epl_job_info)
   ieee1284_release (epl_job_info->port);
   ieee1284_close (epl_job_info->port);
   free(epl_job_info->port);
+  ieee1284_free_ports (epl_job_info->port_list);
+  free(epl_job_info->port_list);
 }
