@@ -1,3 +1,6 @@
+2003-05-04: cvs - Hin-Tak Leung
+   . 2nd try at fixing libieee1284 memory allocation problem, + misc.
+
 2003-05-02: cvs - Hin-Tak Leung
    . fix libieee1284 memory allocation problem.
 
